
[metadata]
name = phruzz_matcher
version = 0.0.1
author = Martin Vallone
author_email = mjvallone@gmail.com
description = Combination of the RapidFuzz library with Spacy PhraseMatcher 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjvallone/phruzz-matcher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True